[workspace]
resolver = "3"

members = [
    "module-01-intro",
    "module-02-routing",
    "module-03-extractors",
    "module-04-response",
    "module-05-state",
    "module-06-middleware", "module-07-errors",
]

# Shared dependencies across all modules
[workspace.dependencies]
# Core Axum Framework
axum = "0.8.8"
axum-extra = { version = "0.10", features = [
    "typed-header",
    "query",
    "multipart",
] }

tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tower Ecosystem
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
    "cors",
    "compression-gzip",
    "timeout",
    "trace",
    "fs",
    "limit",
] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
