[package]
name = "module-09-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {workspace = true}
axum-extra = {workspace = true}
tokio = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
jsonwebtoken = {workspace = true}
argon2 = {workspace = true}
chrono = {workspace = true}
uuid = {workspace = true}
thiserror = {workspace = true}
rand = "0.8"

